gitops-config/overlays/staging/patches/staging-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nexvion-frontend
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/certificate-arn: >
      arn:aws:acm:ap-south-1:XXXXXXXXXXXX:
      certificate/STAGING-CERT-ID
    alb.ingress.kubernetes.io/ssl-policy: ELBSecurityPolicy-TLS13-1-2-2021-06
spec:
  ingressClassName: alb
  rules:
    - host: staging-nexvion.ghanshyam.site
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: staging-nexvion-frontend
                port:
                  number: 80
